@@ -8,6 +8,11 @@ Major User visible changes in Buildslave.             -*- outline -*-
 
 ** Fixes
 
+*** Command-line options changed
+
+Added new `-n|--no-logrotate` flag to create-slave command which disables
+internal logging and log rotation mechanism in buildbot.tac (ticket #973)
+
 *** Delete srcdir before retrying git clone (ticket #884)
 
 *** Fix setup.py to install a launcher script properly in all cases.
